feat: implement DepartmentCreate component and integrate department deletion functionality; update styles and improve responsiveness

--- a/src/page/departmentList.css
+++ b/src/page/departmentList.css
@@ -1,4 +1,9 @@
 .deptList-container {
   margin: auto;
-  width: 80%;
+  width: 60%;
+}
+@media screen and (max-width: 768px) {
+  .deptList-container {
+    width: 90%;
+  }
 }
