feat: add job management functionality; implement JobList, JobCreate, and JobTitleList components; integrate job slice for state management

--- a/src/page/departmentList.css
+++ b/src/page/departmentList.css
@@ -2,6 +2,11 @@
   margin: auto;
   width: 60%;
 }
+.circular-progress {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @media screen and (max-width: 768px) {
   .deptList-container {
     width: 90%;
